@@ -174,12 +174,13 @@ static int	dns_query(AGENT_REQUEST *request, AGENT_RESULT *result, int short_ans
 #if defined(HAVE_RES_QUERY) || defined(_WINDOWS)
 
 	size_t			offset = 0;
-	int			res, type, retrans, retry, i, ret = SYSINFO_RET_FAIL,
-				saved_nscount, saved_retrans, saved_retry;
+	int			res, type, retrans, retry, i, ret = SYSINFO_RET_FAIL;
 	char			*ip, zone[MAX_STRING_LEN], buffer[MAX_STRING_LEN], *zone_str, *param;
 	struct in_addr		inaddr;
+#ifndef _WINDOWS
+	int			saved_nscount, saved_retrans, saved_retry;
 	struct sockaddr_in	saved_ns;
-
+#endif
 	typedef struct
 	{
 		char	*name;
